# ScarlettArchiver-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  ScarlettArchiver-cpp.sln
CppShift/: BasicRequest.cpp  BasicRequest.hpp  CMakeLists.txt  PushShift.hpp  RedditClient.hpp  cURLReceive.hpp
Scarlett/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Logger.cpp  Logger.hpp  Misc.cpp  Misc.hpp  ParseOptions.cpp  Retriever.hpp  Scarlett  Scarlett.cpp  Scarlett.hpp  Scarlett.vcxproj  Scarlett.vcxproj.filters  StringOps.cpp  StringOps.hpp  SubredditMetadata.cpp  SubredditMetadata.hpp  exceptions.cpp  exceptions.hpp  main.cpp
Scarlett/Client/: Authenticator.hpp  IntervalTracker.cpp  IntervalTracker.hpp  OAuth2.hpp  PushShift.hpp  Reddit.cpp  Reddit.hpp
Scarlett/Core/: Logger.hpp  Misc.cpp  Misc.hpp  Scarlett.cpp  Scarlett.hpp  exceptions.cpp  exceptions.hpp  main.cpp
Scarlett/Images/: Imgur.cpp  Imgur.hpp
Scarlett/Internal/: Helpers.hpp  Logger.cpp  Serializable.hpp  exceptions.cpp  exceptions.hpp  pch.h
Scarlett/Media/: Content.cpp  Content.hpp  Imgur.cpp  Imgur.hpp  VideoInfo.cpp  VideoInfo.hpp
Scarlett/Reddit/: Comment.cpp  Comment.hpp  CommentListing.cpp  CommentListing.hpp  Galleries.cpp  Galleries.hpp  Image.cpp  Image.hpp  Link.cpp  Link.hpp  Linkable.cpp  Linkable.hpp  Listing.hpp  Postable.cpp  Postable.hpp  RedditAssets.hpp  RedditCommon.cpp  RedditCommon.hpp  SelfPost.cpp  SelfPost.hpp  SelfPosts.cpp  Subreddit.cpp  Subreddit.hpp  SubredditMetadata.cpp  SubredditMetadata.hpp  TextPost.cpp  TextPost.hpp  Video.cpp  Video.hpp
Scarlett/Reddit/BaseTypes/: Link.cpp  Link.hpp  Linkable.cpp  Linkable.hpp  Postable.cpp  Postable.hpp  Serializable.hpp  TextPost.cpp  TextPost.hpp
Scarlett/Scarlett/: Logger.cpp  Logger.hpp  Misc.cpp  ParseOptions.hpp  Scarlett.cpp  Scarlett.hpp  StringOps.cpp  StringOps.hpp
Scarlett/include/Scarlett/: Scarlett.hpp
Scarlett/include/Scarlett/Client/: AccessData.hpp  Authenticator.hpp  IntervalTracker.hpp  OAuth2.hpp  PushShift.hpp  RateTracker.hpp  Reddit.hpp
Scarlett/include/Scarlett/Internal/: Exceptions.hpp  Helpers.hpp  Logger.hpp  ScarlettConstants.h  Scarlett_def.hpp  Serializable.hpp  Types.hpp  pch.h
Scarlett/include/Scarlett/Media/: Content.hpp  Imgur.hpp
Scarlett/include/Scarlett/Reddit/: Comment.hpp  Galleries.hpp  RedditStatistics.hpp  SelfPost.hpp  Subreddit.hpp  SubredditMetadata.hpp  Video.hpp
Scarlett/include/Scarlett/Reddit/BaseTypes/: Link.hpp  Linkable.hpp  Listing.hpp  Postable.hpp  TextPost.hpp  Thing.hpp
Scarlett/src/Client/: IntervalTracker.cpp  OAuth2.cpp  PushShift.cpp  RateTracker.cpp  Reddit.cpp
Scarlett/src/Internal/: Exceptions.cpp  Helpers.cpp  Logger.cpp  Serializable.cpp  Types.cpp
Scarlett/src/Media/: Content.cpp  Imgur.cpp
Scarlett/src/Reddit/: Comment.cpp  Galleries.cpp  RedditStatistics.cpp  SelfPost.cpp  Subreddit.cpp  SubredditMetadata.cpp  Video.cpp
Scarlett/src/Reddit/BaseTypes/: Link.cpp  Linkable.cpp  Listing.cpp  Postable.cpp  TextPost.cpp  Thing.cpp
Scarlett/tests/: CMakeLists.txt  scarlett_pch.hpp
Scarlett/tests/oauth2_tests/: main.cpp  scarlett_authorization.cpp  scarlett_password_grant.cpp
ScarlettMain/: CMakeLists.txt  Scarlett.hpp  ScarlettCore.cpp  ScarlettCore.hpp  main.cpp
Vun/: AccessData.cpp  AccessData.hpp  BasicRequest.cpp  BasicRequest.hpp  CMakeLists.txt  HTTPListener.cpp  HTTPListener.hpp  Makefile  PushShift.cpp  PushShift.hpp  Reddit.cpp  Reddit.hpp  RedditClient.cpp  RedditClient.hpp  cmake_install.cmake  helpers.cpp  helpers.hpp  libVun.vcxproj  libVun.vcxproj.filters  packages.config
Vun/Internal/: IntervalTracker.cpp  IntervalTracker.hpp
libScarlett/: CMakeLists.txt  PushShift.cpp  PushShift.hpp  RedditAssets.hpp  Scarlett.hpp
libScarlett/BaseTypes/: Link.hpp  Postable.cpp
libScarlett/Client/: PushShift.cpp  PushShift.hpp  Reddit.cpp
libScarlett/Internal/: Helpers.cpp  Helpers.hpp  IntervalTracker.cpp  IntervalTracker.hpp  Misc.cpp  Misc.hpp  StringOps.hpp  exceptions.cpp  pch.h
libScarlett/Media/: Content.cpp  Content.hpp  Imgur.cpp  Imgur.hpp
libScarlett/Reddit/: Comment.hpp  Galleries.cpp  Reddit.hpp  Subreddit.cpp  Subreddit.hpp  SubredditMetadata.cpp  SubredditMetadata.hpp
libScarlett/Reddit/BaseTypes/: Link.hpp  Postable.hpp  TextPost.hpp
